api add score to calcAmount()
