# public/docs/openapi.yaml
@@ -3376,7 +3376,7 @@ paths:
                 file_base64:
                   type: string
                   description: 'data:image/jpeg;base64,/9j/7gAhQWR...'
-                  example: quisquam
+                  example: est
               required:
                 - file_base64
   /api/profile/avatar/delete:
@@ -5024,11 +5024,11 @@ paths:
                 flight_date:
                   type: date
                   description: 'Required for booking'
-                  example: doloremque
+                  example: at
                 flight_time:
                   type: time
                   description: 'Required for booking'
-                  example: ratione
+                  example: fuga
                 is_unified:
                   type: boolean
                   description: 'Required for certificate purchase'
@@ -5036,11 +5036,11 @@ paths:
                 location_id:
                   type: integer
                   description: 'Required for booking'
-                  example: 19
+                  example: 9
                 flight_simulator_id:
                   type: integer
                   description: 'Required for booking'
-                  example: 10
+                  example: 18
                 promocode_id:
                   type: integer
                   description: ''
@@ -5052,7 +5052,7 @@ paths:
                 certificate_whom:
                   type: string
                   description: 'For whom certificate. Required for certificate purchase'
-                  example: in
+                  example: dolor
                 comment:
                   type: string
                   description: ''
@@ -5608,11 +5608,11 @@ paths:
                 flight_date:
                   type: date
                   description: 'Required for booking'
-                  example: sit
+                  example: nam
                 flight_time:
                   type: time
                   description: 'Required for booking'
-                  example: aut
+                  example: ab
                 is_unified:
                   type: boolean
                   description: 'Required for certificate purchase'
@@ -5620,11 +5620,11 @@ paths:
                 location_id:
                   type: integer
                   description: 'Required for booking'
-                  example: 19
+                  example: 16
                 flight_simulator_id:
                   type: integer
                   description: 'Required for booking'
-                  example: 2
+                  example: 16
                 promocode_id:
                   type: integer
                   description: ''
@@ -5636,7 +5636,7 @@ paths:
                 certificate_whom:
                   type: string
                   description: 'For whom certificate. Required for certificate purchase'
-                  example: eveniet
+                  example: quod
                 comment:
                   type: string
                   description: ''
@@ -5652,6 +5652,225 @@ paths:
                 - product_id
                 - product_amount
                 - is_certificate_purchase
+  /api/v2/tariff/price:
+    get:
+      summary: 'Tariff Amount V2'
+      description: ''
+      parameters:
+        -
+          in: query
+          name: api_key
+          description: ''
+          example: null
+          required: true
+          schema:
+            type: string
+            description: ''
+            example: null
+        -
+          in: query
+          name: token
+          description: ''
+          example: null
+          required: true
+          schema:
+            type: string
+            description: ''
+            example: null
+        -
+          in: query
+          name: product_id
+          description: ''
+          example: null
+          required: true
+          schema:
+            type: integer
+            description: ''
+            example: null
+        -
+          in: query
+          name: is_certificate_purchase
+          description: ''
+          example: null
+          required: false
+          schema:
+            type: boolean
+            description: ''
+            example: null
+        -
+          in: query
+          name: is_unified
+          description: ''
+          example: null
+          required: false
+          schema:
+            type: boolean
+            description: ''
+            example: null
+        -
+          in: query
+          name: promocode_id
+          description: ''
+          example: null
+          required: false
+          schema:
+            type: integer
+            description: ''
+            example: null
+        -
+          in: query
+          name: location_id
+          description: ''
+          example: null
+          required: false
+          schema:
+            type: integer
+            description: ''
+            example: null
+        -
+          in: query
+          name: certificate_id
+          description: ''
+          example: null
+          required: false
+          schema:
+            type: integer
+            description: ''
+            example: null
+        -
+          in: query
+          name: score
+          description: ''
+          example: null
+          required: false
+          schema:
+            type: integer
+            description: ''
+            example: null
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: success
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: "{\n\t\"success\": true,\n\t\"message\": \"\",\n\t\"data\": {\n\t\t\"amount\": 5500,\n\t}\n}"
+        400:
+          description: 'Bad Request'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: false
+                  error: 'Некорректный Api-ключ'
+                  debug: null
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  error:
+                    type: string
+                    example: 'Некорректный Api-ключ'
+                  debug:
+                    type: string
+                    example: null
+        404:
+          description: 'Resource Not Found'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: false
+                  error: 'Ресурс не найден'
+                  debug: '<app_url>/api/<method>'
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  error:
+                    type: string
+                    example: 'Ресурс не найден'
+                  debug:
+                    type: string
+                    example: '<app_url>/api/<method>'
+        405:
+          description: 'Method Not Allowed'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: false
+                  error: 'Метод не разрешен'
+                  debug: '<app_url>/api/<method>'
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  error:
+                    type: string
+                    example: 'Метод не разрешен'
+                  debug:
+                    type: string
+                    example: '<app_url>/api/<method>'
+        429:
+          description: 'Too Many Attempts'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: false
+                  error: 'Слишком много попыток. Попробуйте позже'
+                  debug: '<app_url>/api/<method>'
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  error:
+                    type: string
+                    example: 'Слишком много попыток. Попробуйте позже'
+                  debug:
+                    type: string
+                    example: '<app_url>/api/<method>'
+        500:
+          description: 'Internal Server Error'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: false
+                  error: 'Внутренняя ошибка'
+                  debug: '<app_url>/api/<method>'
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  error:
+                    type: string
+                    example: 'Внутренняя ошибка'
+                  debug:
+                    type: string
+                    example: '<app_url>/api/<method>'
+      tags:
+        - Endpoints
 tags:
   -
     name: Endpoints
